--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -16,5 +16,7 @@ android {
 }
 
 dependencies {
-	compile "com.google.android.gms:play-services-location:11.2.2"
+	// for reading google-services.json and configuration
+	def googlePlayServicesVersion = project.hasProperty('googlePlayServicesVersion') ? project.googlePlayServicesVersion : "11.4.0"
+	compile "com.google.android.gms:play-services-location:$googlePlayServicesVersion"
 }
